--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^5.22.0",
+    "bullmq": "^5.66.5",
+    "csv-parse": "^6.1.0",
+    "ioredis": "^5.9.2",
     "next": "16.1.3",
+    "next-auth": "^4.24.13",
+    "nodemailer": "^7.0.12",
+    "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
