--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^5.22.0",
+    "axios": "^1.13.2",
     "bullmq": "^5.66.5",
     "csv-parse": "^6.1.0",
     "ioredis": "^5.9.2",
