--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@sendgrid/mail": "^8.1.6",
     "@tiptap/pm": "^3.15.3",
     "@tiptap/react": "^3.15.3",
     "@tiptap/starter-kit": "^3.15.3",
+    "@upstash/redis": "^1.36.1",
     "axios": "^1.13.2",
     "bullmq": "^5.66.5",
     "class-variance-authority": "^0.7.1",
@@ -37,6 +39,7 @@
     "prisma": "^5.22.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "redis": "^5.10.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
