--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "npm prisma generate && next build",
     "start": "next start",
     "worker": "node workers/email.worker.js",
     "lint": "eslint"
